# Moment-2778-F-LanguageModel

./: .gitignore  LoRa4Moment.ipynb  README.md  chat.py  debug_lora_chat.py  pyproject.toml  rag_raymond.py
agent/: config.py  graph.py  llm.py  memory.py  prompt.py
cache/: user_config.yaml
dataset/: GroupChat_History.jsonl  data_cleaning.py  raymond.json  raymond_finetune_data_clean.jsonl  raymond_sharegpt.json
fullversion/: .env.example  .gitignore  Modelfile  README.md  pyproject.toml
fullversion/bot/: DEPLOY.md  __init__.py  qq_bot.py  raymond_core.py  wechat_bot.py
fullversion/data_pipeline/: clean_and_validate.py  clean_preference_data.py  generate_distill_data.py  generate_preference_data.py
fullversion/training/: dpo_train.ipynb  raymond_train.ipynb  reward_model_train.ipynb  rlhf_ppo_train.ipynb
llamaboard_cache/: user_config.yaml
raymond_faiss_index/: index.faiss  index.pkl
raymond_memory_index/: index.faiss  index.pkl
resources/: raymond_fewshot.json  raymond_memories.json  raymond_persona.json  user_config.properties
