[project]
name = "moment-2778-f-languagemodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "peft>=0.18.1",
    "protobuf>=6.33.5",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
