[project]
name = "raymond-fullversion"
version = "1.0.0"
description = "Raymond - Full pipeline: data distillation → LoRA training → local deployment → bot integration"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Step 1: 数据生成
    "anthropic>=0.40.0",

    # Step 2+: Agent / 推理
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=4.0.0",
    "python-dotenv>=1.0.0",

    # 通用工具
    "tqdm>=4.66.0",

    # Step 5: QQ 机器人
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",

    # Step 5: 微信机器人（可选，按需安装）
    # "wcferry>=39.4.4",      # Windows 专用，pip install wcferry
    # "itchat-uos>=1.3.10",  # 备用方案，pip install itchat-uos
]
